Update Kubernetes deployment to use dynamic image version and set imagePullPolicy

--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -18,6 +18,7 @@ spec:
           image: suryansh2004/node-app:latest
           ports:
             - containerPort: 3000
+          imagePullPolicy: Always
 ---
 apiVersion: v1
 kind: Service
